--- a/GemCare.API/Properties/launchSettings.json
+++ b/GemCare.API/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:1429/",
+      "applicationUrl": "http://localhost:1429/swagger/index.html",
       "sslPort": 44389
     }
   },
