email login verification, Booking modification, email sending at login, services response modification, Email code on login

--- a/GemCare.API/appsettings.json
+++ b/GemCare.API/appsettings.json
@@ -15,5 +15,10 @@
     "Audience": "GemCareApiUser",
     "Expires": "6",
     "RefreshTokenExpiry": "7"
+  },
+  "SmtpConfiguration": {
+    "SmtpServer": "send.one.com",
+    "SmtpPort": "587",
+    "Password": "webimpersonate12#$%"
   }
 }
