--- a/GemCare.API/appsettings.json
+++ b/GemCare.API/appsettings.json
@@ -9,6 +9,11 @@
   "ConnectionStrings": {
     "DBConnection_Live": "Server=DESKTOP-UCR5FTE;Database=GemCareDB;Trusted_Connection=True;"
   },
+  "ApiKeys": {
+    "API_Text": "GemCareLab.API",
+    "EncryptionIV": "GemCa.@PI.v@1.V1",
+    "EncryptionKey": "_)GemCa.L0nd0n.@PI.12345"
+  },
   "JWTSettings": {
     "SecretKey": "Dg09AAt@D@$MQA4+AGIAOQBjADc+AyADkAZQA2@AHwAM",
     "Issuer": "GemCareLab",
