Paypal bearer token... generated

--- a/GemCare.API/appsettings.json
+++ b/GemCare.API/appsettings.json
@@ -36,6 +36,6 @@
     "SecretKey": "EHDQnPzqo7vDn5gexh984cJjha7WEvoaIOh2-CUf-Ym4boW6q-ExETRTNqM0U_h5av6Hu6Buj6rJ0IGI",
     "SandboxUrl": "https://api-m.sandbox.paypal.com/",
     "ProductionUrl": "https://api-m.paypal.com/",
-    "UseProductionEnviroment": false
+    "UseProductionEnviroment": "false"
   }
 }
