--- a/GemCare.API/appsettings.json
+++ b/GemCare.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DBConnection_Live": "Server=DESKTOP-UCR5FTE;Database=GemCareDB;Trusted_Connection=True;"
+    "DBConnection_Live": "workstation id= WIN-799RI0TSTOF\\SQLEXPRESS;packet size=4096;user id=sa;password=TrotsDevServer!@;data source= WIN-799RI0TSTOF\\SQLEXPRESS;persist security info=false;initial catalog=GemCareDB;"
   },
   "ApiKeys": {
     "API_Text": "GemCareLab.API",
