--- a/.gitignore
+++ b/.gitignore
@@ -1536,3 +1536,5 @@ GemCare.Data/obj/Release/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
 GemCare.Data/obj/Release/net5.0/GemCare.Data.AssemblyInfo.cs
 GemCare.Data/obj/Release/net5.0/GemCare.Data.dll
 GemCare.Data/obj/Release/net5.0/ref/GemCare.Data.dll
+.vs/GemCareLabSolution/FileContentIndex/388ee7d0-d57b-49cc-8ac8-5961265ae66d.vsidx
+.vs/GemCareLabSolution/FileContentIndex/f6979978-5980-4c2c-aaa3-e5e0dd1ac490.vsidx
