gitignore and notracking

--- a/.gitignore
+++ b/.gitignore
@@ -1538,3 +1538,11 @@ GemCare.Data/obj/Release/net5.0/GemCare.Data.dll
 GemCare.Data/obj/Release/net5.0/ref/GemCare.Data.dll
 .vs/GemCareLabSolution/FileContentIndex/388ee7d0-d57b-49cc-8ac8-5961265ae66d.vsidx
 .vs/GemCareLabSolution/FileContentIndex/f6979978-5980-4c2c-aaa3-e5e0dd1ac490.vsidx
+.vs/GemCareLabSolution/DesignTimeBuild/.dtbcache.v2
+.vs/GemCareLabSolution/FileContentIndex/9b9b735a-1571-4889-8f75-218bc601e9eb.vsidx
+.vs/GemCareLabSolution/FileContentIndex/d6b53ae4-bc79-4ec0-ad56-d6b26a3ac7df.vsidx
+.vs/GemCareLabSolution/FileContentIndex/ebddffef-4bb0-4874-82ba-2e954dc825d6.vsidx
+.vs/GemCareLabSolution/v17/.suo
+.vs/ProjectEvaluation/gemcarelabsolution.metadata.v2
+.vs/ProjectEvaluation/gemcarelabsolution.projects.v2
+GemCare.API/bin/Debug/net5.0/GemCare.API.deps.json
