--- a/.gitignore
+++ b/.gitignore
@@ -1546,3 +1546,43 @@ GemCare.Data/obj/Release/net5.0/ref/GemCare.Data.dll
 .vs/ProjectEvaluation/gemcarelabsolution.metadata.v2
 .vs/ProjectEvaluation/gemcarelabsolution.projects.v2
 GemCare.API/bin/Debug/net5.0/GemCare.API.deps.json
+.vs/GemCareLabSolution/v17/.futdcache.v1
+.vs/GemCareLabSolution/v17/HierarchyCache.v1.txt
+GemCare.API/bin/Debug/net5.0/GemCare.API.dll
+GemCare.API/bin/Debug/net5.0/GemCare.API.exe
+GemCare.API/bin/Debug/net5.0/GemCare.API.pdb
+GemCare.API/bin/Debug/net5.0/GemCare.API.runtimeconfig.dev.json
+GemCare.API/bin/Debug/net5.0/GemCare.Data.dll
+GemCare.API/bin/Debug/net5.0/GemCare.Data.pdb
+GemCare.API/bin/Debug/net5.0/System.Net.Http.WebRequest.dll
+GemCare.API/obj/GemCare.API.csproj.nuget.dgspec.json
+GemCare.API/obj/GemCare.API.csproj.nuget.g.props
+GemCare.API/obj/GemCare.API.csproj.nuget.g.targets
+GemCare.API/obj/project.assets.json
+GemCare.API/obj/project.nuget.cache
+GemCare.API/obj/Debug/net5.0/apphost.exe
+GemCare.API/obj/Debug/net5.0/GemCare.API.assets.cache
+GemCare.API/obj/Debug/net5.0/GemCare.API.csproj.AssemblyReference.cache
+GemCare.API/obj/Debug/net5.0/GemCare.API.csproj.CoreCompileInputs.cache
+GemCare.API/obj/Debug/net5.0/GemCare.API.csproj.FileListAbsolute.txt
+GemCare.API/obj/Debug/net5.0/GemCare.API.dll
+GemCare.API/obj/Debug/net5.0/GemCare.API.GeneratedMSBuildEditorConfig.editorconfig
+GemCare.API/obj/Debug/net5.0/GemCare.API.genruntimeconfig.cache
+GemCare.API/obj/Debug/net5.0/GemCare.API.pdb
+GemCare.API/obj/Debug/net5.0/ref/GemCare.API.dll
+GemCare.API/obj/Debug/net5.0/refint/GemCare.API.dll
+GemCare.Data/bin/Debug/net5.0/GemCare.Data.dll
+GemCare.Data/bin/Debug/net5.0/GemCare.Data.pdb
+GemCare.Data/obj/GemCare.Data.csproj.nuget.dgspec.json
+GemCare.Data/obj/GemCare.Data.csproj.nuget.g.props
+GemCare.Data/obj/GemCare.Data.csproj.nuget.g.targets
+GemCare.Data/obj/project.assets.json
+GemCare.Data/obj/project.nuget.cache
+GemCare.Data/obj/Debug/net5.0/GemCare.Data.assets.cache
+GemCare.Data/obj/Debug/net5.0/GemCare.Data.csproj.AssemblyReference.cache
+GemCare.Data/obj/Debug/net5.0/GemCare.Data.csproj.CoreCompileInputs.cache
+GemCare.Data/obj/Debug/net5.0/GemCare.Data.dll
+GemCare.Data/obj/Debug/net5.0/GemCare.Data.GeneratedMSBuildEditorConfig.editorconfig
+GemCare.Data/obj/Debug/net5.0/GemCare.Data.pdb
+GemCare.Data/obj/Debug/net5.0/ref/GemCare.Data.dll
+GemCare.Data/obj/Debug/net5.0/refint/GemCare.Data.dll
