booking reviews( Get, Update) and Booking (delete)

--- a/.gitignore
+++ b/.gitignore
@@ -1599,3 +1599,7 @@ GemCare.API/obj/Debug/net5.0/GemCare.API.dll
 GemCare.Data/obj/GemCare.Data.csproj.nuget.g.targets
 GemCare.Data/obj/Debug/net5.0/GemCare.Data.dll
 GemCare.Data/obj/Debug/net5.0/ref/GemCare.Data.dll
+.vs/GemCareLabSolution/FileContentIndex/5dc3ff7f-0845-43b0-b71f-4f0e1b866925.vsidx
+.vs/GemCareLabSolution/FileContentIndex/5ea0c19e-45b2-4fb7-ad5c-e4628096b533.vsidx
+.vs/GemCareLabSolution/FileContentIndex/9e9ab536-5828-44ae-8a36-0c2bcfdc5970.vsidx
+.vs/GemCareLabSolution/FileContentIndex/d808bda0-eb93-47e8-97b3-88719ac66f83.vsidx
