--- a/.gitignore
+++ b/.gitignore
@@ -1603,3 +1603,7 @@ GemCare.Data/obj/Debug/net5.0/ref/GemCare.Data.dll
 .vs/GemCareLabSolution/FileContentIndex/5ea0c19e-45b2-4fb7-ad5c-e4628096b533.vsidx
 .vs/GemCareLabSolution/FileContentIndex/9e9ab536-5828-44ae-8a36-0c2bcfdc5970.vsidx
 .vs/GemCareLabSolution/FileContentIndex/d808bda0-eb93-47e8-97b3-88719ac66f83.vsidx
+.vs/GemCareLabSolution/FileContentIndex/1cafd28e-7b15-4f9e-b2cc-54c343aebed1.vsidx
+.vs/GemCareLabSolution/FileContentIndex/58c3b1d6-8f20-4888-a6d2-792e191cf9d0.vsidx
+.vs/GemCareLabSolution/FileContentIndex/a3181810-3dcb-42f6-9b2c-a64e73ecc8ba.vsidx
+.vs/GemCareLabSolution/FileContentIndex/f114e89d-0d9f-4f98-bd10-b3223099d353.vsidx
