--- a/.gitignore
+++ b/.gitignore
@@ -1607,3 +1607,7 @@ GemCare.Data/obj/Debug/net5.0/ref/GemCare.Data.dll
 .vs/GemCareLabSolution/FileContentIndex/58c3b1d6-8f20-4888-a6d2-792e191cf9d0.vsidx
 .vs/GemCareLabSolution/FileContentIndex/a3181810-3dcb-42f6-9b2c-a64e73ecc8ba.vsidx
 .vs/GemCareLabSolution/FileContentIndex/f114e89d-0d9f-4f98-bd10-b3223099d353.vsidx
+.vs/GemCareLabSolution/FileContentIndex/5e461a72-1b87-4500-8c4b-803313d7e02f.vsidx
+.vs/GemCareLabSolution/FileContentIndex/abea91ca-076c-4686-8928-ef90bd9653ec.vsidx
+.vs/GemCareLabSolution/FileContentIndex/b4c3cdbd-f93f-4407-9f90-23f1bfac491b.vsidx
+.vs/GemCareLabSolution/FileContentIndex/d6cf24fb-0c68-410c-88fc-060ca7346751.vsidx
