--- a/.gitignore
+++ b/.gitignore
@@ -1611,3 +1611,5 @@ GemCare.Data/obj/Debug/net5.0/ref/GemCare.Data.dll
 .vs/GemCareLabSolution/FileContentIndex/abea91ca-076c-4686-8928-ef90bd9653ec.vsidx
 .vs/GemCareLabSolution/FileContentIndex/b4c3cdbd-f93f-4407-9f90-23f1bfac491b.vsidx
 .vs/GemCareLabSolution/FileContentIndex/d6cf24fb-0c68-410c-88fc-060ca7346751.vsidx
+.vs/GemCareLabSolution/FileContentIndex/0b09424a-6a30-4994-9641-c417d1499e92.vsidx
+.vs/GemCareLabSolution/FileContentIndex/3f688d52-4861-4a19-aa37-738853e8abc2.vsidx
